Show only the Taipei's map.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
         <meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="css/style.css" />
         <script src="https://d3js.org/d3.v5.min.js"></script>
-        <!-- <script src="https://d3js.org/topojson.v2.min.js"></script> -->
-        <script src="https://unpkg.com/topojson@3"></script>
+        <script src="https://d3js.org/topojson.v2.min.js"></script>
         <script src="js/script.js"></script>
 
         <title>HW2</title>
     </head>
 
     <body>
-        <div class="title">TAIWAN</div>
+        <div class="container">
+            <svg></svg>
+            <div class="info">
+                <div class="title">顯示資訊</div>
+                <div class="content"></div>
+            </div>
+        </div>
     </body>
 </html>
