Design side information bar.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </head>
 
     <body>
-        <div class="container">
-            <svg></svg>
-            <div class="info">
-                <div class="title">顯示資訊</div>
-                <div class="content"></div>
-            </div>
+        <!-- <div class="container"> -->
+        <svg></svg>
+        <div class="info">
+            <div class="title">顯示資訊</div>
+            <div class="content"></div>
         </div>
+        <!-- </div> -->
     </body>
 </html>
