--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <svg></svg>
         <div class="info">
             <div class="title">顯示資訊</div>
-            <div class="content"></div>
+            <div class="sna"></div>
+            <div class="sbi"></div>
         </div>
     </body>
 </html>
