--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <script src="https://d3js.org/topojson.v2.min.js"></script>
         <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
         <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
-        <script src="js/script.js"></script>
+        <script src="js/script1.js"></script>
 
         <title>HW2</title>
     </head>
 
     <body>
         <svg></svg>
-        <div class="info">
+        <div id="info">
             <div class="title">顯示資訊</div>
             <div class="sna"></div>
             <div class="sbi"></div>
