rewrite the logic & hide overflow part of voronoi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
         <script src="js/script1.js"></script>
 
-        <title>HW2</title>
+        <title>Data Visualization - YouBike</title>
     </head>
 
     <body>
