--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="https://d3js.org/topojson.v2.min.js"></script>
         <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
         <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
-        <script src="js/script1.js"></script>
+        <script src="js/script.js"></script>
 
         <title>Data Visualization - YouBike</title>
     </head>
@@ -19,6 +19,7 @@
             <div class="title">顯示資訊</div>
             <div class="sna"></div>
             <div class="sbi"></div>
+            <div class="content"></div>
         </div>
     </body>
 </html>
