integrate with google map.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="css/style.css" />
+        <script src="https://maps.googleapis.com/maps/api/js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://d3js.org/topojson.v2.min.js"></script>
         <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
@@ -14,7 +15,8 @@
     </head>
 
     <body>
-        <svg></svg>
+        <!-- <svg></svg> -->
+        <div id="map"></div>
         <div id="info">
             <div class="title">顯示資訊</div>
             <div class="datetime"></div>
