--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="icon" href="img/bicycle.png" />
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCry-N7OmyPr5PK81akHssN7Z5SfHhKLh4&callback=initMap"></script>
-        <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://d3js.org/topojson.v2.min.js"></script>
         <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
@@ -16,6 +16,7 @@
     </head>
 
     <body>
+        <!-- <svg id="top"></svg> -->
         <div id="map"></div>
         <div id="info">
             <div class="title">顯示資訊</div>
