--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <div id="map"></div>
         <div id="info">
-            <div class="title">顯示資訊</div>
+            <div class="title">YouBike 及時資訊</div>
             <div class="search">
                 <input type="text" placeholder="Search.." id="search-bar"/>
                 <button type="submit" id="search-btn"><i class="fa fa-search"></i>
@@ -30,6 +30,7 @@
                 <i class="fas fa-parking btn" id="empty-btn"></i>
                 <i class="fas fa-ban btn" id="none-btn"></i>
             </div>
+            <svg id="legend"></svg>
             <div class="datetime"></div>
             <div class="content"></div>
         </div>
