--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <div id="map"></div>
         <div id="info">
-            <div class="title">YouBike 及時資訊</div>
+            <div class="title">YouBike 即時資訊</div>
             <div class="search">
                 <input type="text" placeholder="Search.." id="search-bar"/>
                 <button type="submit" id="search-btn"><i class="fa fa-search"></i>
