--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="icon" href="img/bicycle.png" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCry-N7OmyPr5PK81akHssN7Z5SfHhKLh4&callback=initMap"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCry-N7OmyPr5PK81akHssN7Z5SfHhKLh4"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://d3js.org/topojson.v2.min.js"></script>
         <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
